wifi scan fragment, updated responsibilities

--- a/app/src/main/res/layout/fragment_wifi_scan_display_checkable.xml
+++ b/app/src/main/res/layout/fragment_wifi_scan_display_checkable.xml
@@ -26,7 +26,34 @@
         <ListView
             android:id="@+id/lv_scanResults"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="369dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Button" />
+        </LinearLayout>
 
     </LinearLayout>
 </FrameLayout>
