updated WifiResultsProcessor, Checkable views updated

--- a/app/src/main/res/layout/checkbox_list_item.xml
+++ b/app/src/main/res/layout/checkbox_list_item.xml
@@ -9,5 +9,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:focusable="false"
+        android:clickable="false"
         android:text="CheckBox" />
 </LinearLayout>
