fixed childFragment issues, ConnectAndSendFragment now working properly

--- a/app/src/main/res/layout/fragment_ask_password.xml
+++ b/app/src/main/res/layout/fragment_ask_password.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Enter the password"
-            android:text="" />
+            android:text="hadtochange" />
 
         <Button
             android:id="@+id/btn_set_password"
