--- a/app/src/main/res/layout/fragment_wifi_connect.xml
+++ b/app/src/main/res/layout/fragment_wifi_connect.xml
@@ -4,10 +4,38 @@
     android:layout_height="match_parent"
     tools:context="com.smb.murtraja.baitaumate.WifiConnectFragment">
 
-    <TextView
-        android:id="@+id/tv_wifiConnectStatus"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_connect"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Connect" />
+
+            <Button
+                android:id="@+id/btn_skip_connect"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Skip" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_wifi_connect_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="" />
+
+    </LinearLayout>
 
 </FrameLayout>
