--- a/app/src/main/res/layout/activity_wifi_mode.xml
+++ b/app/src/main/res/layout/activity_wifi_mode.xml
@@ -2,10 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ll_wifi_mode"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginTop="-15dp"
     tools:context="com.smb.murtraja.baitaumate.WifiModeActivity">
 
+    <TextView
+        android:id="@+id/tv_wifi_mode_config_status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="" />
+
+    <LinearLayout
+        android:id="@+id/ll_wifi_mode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"></LinearLayout>
 </LinearLayout>
