--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,21 @@
     android:layout_height="match_parent"
     tools:context="com.smb.murtraja.baitaumate.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/btn_configure_lights"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_marginBottom="109dp"
+        android:text="Configure Lights"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
-        <TextView
-            android:id="@+id/tv_status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textAppearance="@android:style/TextAppearance.Holo.Medium" />
-
-        <Button
-            android:id="@+id/btn_scanAgain"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Scan" />
-
-        <ListView
-            android:id="@+id/lv_scanResults"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn_wifi_mode_config"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Wifi Mode Config"
+        android:layout_alignBaseline="@+id/btn_configure_lights"
+        android:layout_alignBottom="@+id/btn_configure_lights"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
