ListFragment for DeviceListActivity is now functional

--- a/app/src/main/res/layout/activity_configure_lights.xml
+++ b/app/src/main/res/layout/activity_configure_lights.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.smb.murtraja.baitaumate.ConfigureLightsActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_configure_lights_status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Click on any device to configure it" />
+
+    <LinearLayout
+        android:id="@+id/ll_configure_lights"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"></LinearLayout>
+</LinearLayout>
