--- a/app/src/main/res/layout/fragment_configure_light.xml
+++ b/app/src/main/res/layout/fragment_configure_light.xml
@@ -41,7 +41,7 @@
             android:id="@+id/tv_commandStatus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="Device reply will appear here" />
 
     </LinearLayout>
 
