--- a/app/src/main/res/layout/fragment_wifi_scan_display_checkable.xml
+++ b/app/src/main/res/layout/fragment_wifi_scan_display_checkable.xml
@@ -4,27 +4,25 @@
     android:layout_height="match_parent"
     tools:context="com.smb.murtraja.baitaumate.WifiScanDisplayFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_wifiScanDisplayStatus"
+            android:id="@+id/tv_wifi_scan_display_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
         <Button
-            android:id="@+id/btn_scanAgain"
+            android:id="@+id/btn_scan_again"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Scan" />
 
         <ListView
-            android:id="@+id/lv_scanResults"
+            android:id="@+id/lv_scan_results"
             android:layout_width="match_parent"
             android:layout_height="369dp" />
 
